@startuml
'https://plantuml.com/class-diagram

entity Country {
* alpha2_code
--
* alpha3_code
* capital
* country
* continent
* population
* latitude
* longitude
* temperature
}

entity Trip {
* id_trip
--
* ship_imo
* id_truck
* id_start_port
* id_destination_port
* id_start_warehouse
* id_destination_warehouse
* date_time_start
* date_time_end
}

entity Port {
* id_port
--
* name
* country_code
* latitude
* longitude
* capacity
}

entity Cargo_Manifest {
* id_cargo_manifest
* id_container
--
* id_trip
* position_code
* cargo_weight
* refrigeration_temperature
* id_client
}

Country ||--o{ Port
Trip ||--|| Cargo_Manifest

@enduml